Allow webhook to manage accounts data
